# Shops

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  tests-docker-compose.yml
.github/workflows/: shops_workflow.yml  yamdb_workflow.yml
alembic/: env.py
alembic/versions/: 01-2023_09_04_2224-init_migrations.py
app/: main.py
app/admin/: panel.py
app/api/: autogenerate.py  constants.py  order.py  routers.py  shopping_point.py  validators.py  visit.py
app/core/: alembic_base.py  config.py  db.py
app/crud/: base.py  customer.py  order.py  shopping_point.py  visit.py  worker.py
app/models/: __init__.py  constants.py  customer.py  order.py  person_base.py  shopping_point.py  visit.py  visti_order_base.py  worker.py
app/schemas/: order.py  shopping_point.py  visit.py
tests/: conftest.py  test_order.py
tests/fixtures/: user.py
