[tool.poetry]
name = "shops"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
asyncpg = "0.27.0"
sqlalchemy = "1.4.36"
alembic = "1.7.7"
uvicorn = {version = "0.17.6", extras = ["standard"]}
psycopg2-binary = "2.9.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
