[tool.poetry]
name = "shops"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
asyncpg = "0.27.0"
sqlalchemy = "1.4.36"
alembic = "1.7.7"
uvicorn = {version = "0.17.6", extras = ["standard"]}
psycopg2-binary = "2.9.7"
fastapi-pagination = "0.9.1"
sqladmin = "^0.14.1"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
faker = "^19.3.1"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.21.1"
requests = "^2.31.0"
pytest = "7.4.0"
anyio = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"
addopts = ["--disable-warnings", "-v"]
testpaths = ["tests"]
